test/syntaxerrors/TestDetectIFStmtSemicolon.jdc
int i= 10;

if (i < 5); {
   println("Yes");
   println("Yes");
}